--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,3 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
+<div class="text-center">
+    <h1 class="display-4">Manage Your Tasks</h1>
+    <p>Add different tasks and organize them based on urgency and importance</p>
+</div>
