Quadrant added tables

--- a/Views/Home/Quadrant.cshtml
+++ b/Views/Home/Quadrant.cshtml
@@ -2,21 +2,67 @@
     ViewData["Title"] = "Quadrant View";
 }
 
+@model List<TaskInfo>
+
 <div class="container">
     <div class="row">
         <div class="col-6">
-            Hi
+            <h1>Quadrant 1</h1>
+            <h4>Important/Urgent</h4>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Task</th>
+                        <th>Due Date</th>
+                        <th>Category</th>
+                        <th>Completed</th>
+                    </tr>
+                </thead>
+            </table>
         </div>
         <div class="col-6">
-            Hi
+            <h1>Quadrant 2</h1>
+            <h4>Important/Not Urgent</h4>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Task</th>
+                        <th>Due Date</th>
+                        <th>Category</th>
+                        <th>Completed</th>
+                    </tr>
+                </thead>
+            </table>
         </div>
     </div>
     <div class="row">
         <div class="col-6">
-            Hi
+            <h1>Quadrant 3</h1>
+            <h4>Not Important/Urgent</h4>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Task</th>
+                        <th>Due Date</th>
+                        <th>Category</th>
+                        <th>Completed</th>
+                    </tr>
+                </thead>
+            </table>
         </div>
         <div class="col-6">
-            Hi
+            <h1>Quadrant 1</h1>
+            <h4>Not Important/Not Urgent</h4>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Task</th>
+                        <th>Due Date</th>
+                        <th>Category</th>
+                        <th>Completed</th>
+                    </tr>
+                </thead>
+            </table>
         </div>
     </div>
 </div>
