--- a/Views/Home/tasks.cshtml
+++ b/Views/Home/tasks.cshtml
@@ -19,7 +19,7 @@
         <option value="">Select a Category</option>
         @foreach(Category c in ViewBag.categories)
         {
-            <option value="@c.CategoryID">@c.CategoryName</option>
+            <option value="@c.CategoryId">@c.CategoryName</option>
         }
     </select><br />
 
