--- a/Views/Home/tasks.cshtml
+++ b/Views/Home/tasks.cshtml
@@ -6,28 +6,34 @@
 <form method="post">
     <div asp-validation-summary="All"></div>
     <label asp-for="Task">Task Name</label><br />
-    <input asp-for="Task"/><br />
+    <input asp-for="Task" /><br /><br />
 
     <label asp-for="DueDate">Due Date</label><br />
-    <input type='date'asp-for="DueDate"/><br />
+    <input type='date' asp-for="DueDate" /><br /><br />
 
     <label asp-for="Quadrant">Quadrant</label><br />
-    <input asp-for="Quadrant"/>
+    <select asp-for="Completed">
+        <option value="">Select a Quadrant</option>
+        <option value="1">Quadrant 1</option>
+        <option value="2">Quadrant 2</option>
+        <option value="3">Quadrant 3</option>
+        <option value="4">Quadrant 4</option>
+    </select><br /><br />
 
-    <label asp-for="Category">Category</label>
-    <select asp-for="Category">
+    <label asp-for="CategoryId">Category</label><br />
+    <select asp-for="CategoryId">
         <option value="">Select a Category</option>
-        @foreach(Category c in ViewBag.categories)
+        @foreach (Category c in ViewBag.categories)
         {
             <option value="@c.CategoryId">@c.CategoryName</option>
         }
-    </select><br />
+    </select><br /><br />
 
     <label asp-for="Completed">Completed</label><br />
     <select asp-for="Completed">
         <option value="True">True</option>
         <option value="False">False</option>
-    </select><br />
+    </select><br /><br />
 
     <button type="submit">Add Task</button>
 
