--- a/Views/Home/tasks.cshtml
+++ b/Views/Home/tasks.cshtml
@@ -14,7 +14,7 @@
                 <input type='date' asp-for="DueDate" /><br /><br />
 
                 <label asp-for="Quadrant">Quadrant</label><br />
-                <select asp-for="Completed">
+                <select asp-for="Quadrant">
                     <option value="">Select a Quadrant</option>
                     <option value="1">Quadrant 1</option>
                     <option value="2">Quadrant 2</option>
@@ -33,8 +33,8 @@
 
                 <label asp-for="Completed">Completed</label><br />
                 <select asp-for="Completed">
-                    <option value="True">True</option>
-                    <option value="False">False</option>
+                    <option value="true">True</option>
+                    <option value="false">False</option>
                 </select><br /><br />
 
                 <button type="submit">Add Task</button>
