--- a/Views/Home/Quadrant.cshtml
+++ b/Views/Home/Quadrant.cshtml
@@ -4,13 +4,12 @@
 
 @model List<TaskInfo>
 
-<div class="container">
     <div class="row">
         <div class="col-6">
             <h1>Quadrant 1</h1>
             <h4>Important/Urgent</h4>
-            <table>
-                <thead>
+            <table class="table table-bordered table-striped">
+                <thead class="cont-weight-bold">
                     <tr>
                         <th>Task</th>
                         <th>Due Date</th>
@@ -21,17 +20,17 @@
                 <tbody>
                     @foreach (var v in Model)
                     {
-                        @*@if (v.Quadrant == 1)
-                        {*@
-                            <tr>
-                                <td>@v.Task</td>
-                                <td>@v.DueDate</td>
-                                <td>@v.Category.CategoryName</td>
-                                <td><input type="checkbox" /></td>
-                                <td>Edit</td>
-                                <td>Delete</td>
-                            </tr>
-                        @*}*@
+                        @if (v.Quadrant == 1)
+                        {
+                        <tr>
+                            <td>@v.Task</td>
+                            <td>@v.DueDate</td>
+                            <td>@v.Category.CategoryName</td>
+                            <td><input type="checkbox" /></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="Edit" asp-route-id="@v.Task">Edit</a></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="Delete" asp-route-id="@v.Task">Delete</a></td>
+                        </tr>
+                        }
                     }
                 </tbody>
             </table>
@@ -39,8 +38,8 @@
         <div class="col-6">
             <h1>Quadrant 2</h1>
             <h4>Important/Not Urgent</h4>
-            <table>
-                <thead>
+            <table class="table table-bordered table-striped">
+                <thead class="cont-weight-bold">
                     <tr>
                         <th>Task</th>
                         <th>Due Date</th>
@@ -53,14 +52,14 @@
                     {
                         @if (v.Quadrant == 2)
                         {
-                            <tr>
-                                <td>@v.Task</td>
-                                <td>@v.DueDate</td>
-                                <td>@v.Category.CategoryName</td>
-                                <td><input type="checkbox" /></td>
-                                <td>Edit</td>
-                                <td>Delete</td>
-                            </tr>
+                        <tr>
+                            <td>@v.Task</td>
+                            <td>@v.DueDate</td>
+                            <td>@v.Category.CategoryName</td>
+                            <td><input type="checkbox" /></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="Edit" asp-route-id="@v.Task">Edit</a></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="Delete" asp-route-id="@v.Task">Delete</a></td>
+                        </tr>
                         }
                     }
                 </tbody>
@@ -71,8 +70,8 @@
         <div class="col-6">
             <h1>Quadrant 3</h1>
             <h4>Not Important/Urgent</h4>
-            <table>
-                <thead>
+            <table class="table table-bordered table-striped">
+                <thead class="cont-weight-bold">
                     <tr>
                         <th>Task</th>
                         <th>Due Date</th>
@@ -85,14 +84,14 @@
                     {
                         @if (v.Quadrant == 3)
                         {
-                            <tr>
-                                <td>@v.Task</td>
-                                <td>@v.DueDate</td>
-                                <td>@v.Category.CategoryName</td>
-                                <td><input type="checkbox" /></td>
-                                <td>Edit</td>
-                                <td>Delete</td>
-                            </tr>
+                        <tr>
+                            <td>@v.Task</td>
+                            <td>@v.DueDate</td>
+                            <td>@v.Category.CategoryName</td>
+                            <td><input type="checkbox" /></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="Edit" asp-route-id="@v.Task">Edit</a></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="Delete" asp-route-id="@v.Task">Delete</a></td>
+                        </tr>
                         }
                     }
                 </tbody>
@@ -101,8 +100,8 @@
         <div class="col-6">
             <h1>Quadrant 4</h1>
             <h4>Not Important/Not Urgent</h4>
-            <table>
-                <thead>
+            <table class="table table-bordered table-striped">
+                <thead class="cont-weight-bold">
                     <tr>
                         <th>Task</th>
                         <th>Due Date</th>
@@ -115,18 +114,17 @@
                     {
                         @if (v.Quadrant == 4)
                         {
-                            <tr>
-                                <td>@v.Task</td>
-                                <td>@v.DueDate</td>
-                                <td>@v.Category.CategoryName</td>
-                                <td><input type="checkbox" /></td>
-                                <td>Edit</td>
-                                <td>Delete</td>
-                            </tr>
+                        <tr>
+                            <td>@v.Task</td>
+                            <td>@v.DueDate</td>
+                            <td>@v.Category.CategoryName</td>
+                            <td><input type="checkbox" /></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="Edit" asp-route-id="@v.Task">Edit</a></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="Delete" asp-route-id="@v.Task">Delete</a></td>
+                        </tr>
                         }
                     }
                 </tbody>
             </table>
         </div>
     </div>
-</div>
