--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -69,3 +69,14 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.my-button {
+    background-color: transparent !important;
+    color: black !important;
+    border-color: black !important;
+}
+
+.my-button:hover {
+    background-color: black !important;
+    color: white !important;
+}
