--- a/Views/Home/tasks.cshtml
+++ b/Views/Home/tasks.cshtml
@@ -31,11 +31,11 @@
                     }
                 </select><br /><br />
 
-                <label asp-for="Completed">Completed</label><br />
+@*              <label asp-for="Completed">Completed</label><br />
                 <select asp-for="Completed">
                     <option value="true">True</option>
                     <option value="false">False</option>
-                </select><br /><br />
+                </select><br /><br />*@
 
                 <button type="submit">Add Task</button>
             </form>
