--- a/Views/Home/Quadrant.cshtml
+++ b/Views/Home/Quadrant.cshtml
@@ -26,9 +26,9 @@
                             <td>@v.Task</td>
                             <td>@v.DueDate</td>
                             <td>@v.Category.CategoryName</td>
-                            <td><input type="checkbox" /></td>
-                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="Edit" asp-route-id="@v.Task">Edit</a></td>
-                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="Delete" asp-route-id="@v.Task">Delete</a></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="CheckOffTask" asp-route-id="@v.Task">Check Off</a></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="UpdateTask" asp-route-id="@v.Task">Edit</a></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="ConfirmDelete" asp-route-id="@v.Task">Delete</a></td>
                         </tr>
                         }
                     }
@@ -44,7 +44,7 @@
                         <th>Task</th>
                         <th>Due Date</th>
                         <th>Category</th>
-                        <th>Completed</th>
+                        <th>Task Completed?</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -56,9 +56,9 @@
                             <td>@v.Task</td>
                             <td>@v.DueDate</td>
                             <td>@v.Category.CategoryName</td>
-                            <td><input type="checkbox" /></td>
-                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="Edit" asp-route-id="@v.Task">Edit</a></td>
-                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="Delete" asp-route-id="@v.Task">Delete</a></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="CheckOffTask" asp-route-id="@v.Task">Check Off</a></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="UpdateTask" asp-route-id="@v.Task">Edit</a></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="ConfirmDelete" asp-route-id="@v.Task">Delete</a></td>
                         </tr>
                         }
                     }
@@ -88,9 +88,9 @@
                             <td>@v.Task</td>
                             <td>@v.DueDate</td>
                             <td>@v.Category.CategoryName</td>
-                            <td><input type="checkbox" /></td>
-                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="Edit" asp-route-id="@v.Task">Edit</a></td>
-                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="Delete" asp-route-id="@v.Task">Delete</a></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="CheckOffTask" asp-route-id="@v.Task">Check Off</a></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="UpdateTask" asp-route-id="@v.Task">Edit</a></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="ConfirmDelete" asp-route-id="@v.Task">Delete</a></td>
                         </tr>
                         }
                     }
@@ -118,9 +118,9 @@
                             <td>@v.Task</td>
                             <td>@v.DueDate</td>
                             <td>@v.Category.CategoryName</td>
-                            <td><input type="checkbox" /></td>
-                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="Edit" asp-route-id="@v.Task">Edit</a></td>
-                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="Delete" asp-route-id="@v.Task">Delete</a></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="CheckOffTask" asp-route-id="@v.Task">Check Off</a></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="UpdateTask" asp-route-id="@v.Task">Edit</a></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="ConfirmDelete" asp-route-id="@v.Task">Delete</a></td>
                         </tr>
                         }
                     }
