--- a/Views/Home/tasks.cshtml
+++ b/Views/Home/tasks.cshtml
@@ -31,11 +31,12 @@
                     }
                 </select><br /><br />
 
-@*              <label asp-for="Completed">Completed</label><br />
-                <select asp-for="Completed">
-                    <option value="true">True</option>
-                    <option value="false">False</option>
-                </select><br /><br />*@
+                @*              <label asp-for="Completed">Completed</label><br />
+        <select asp-for="Completed">
+            <option value="true">True</option>
+            <option value="false">False</option>
+        </select><br /><br />*@
+                <input type="hidden" asp-for="Completed" value="false" />
 
                 <button type="submit">Add Task</button>
             </form>
