--- a/Views/Home/Quadrant.cshtml
+++ b/Views/Home/Quadrant.cshtml
@@ -26,9 +26,9 @@
                             <td>@v.Task</td>
                             <td>@v.DueDate</td>
                             <td>@v.Category.CategoryName</td>
-                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="CheckOffTask" asp-route-id="@v.Task">Check Off</a></td>
-                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="UpdateTask" asp-route-id="@v.Task">Edit</a></td>
-                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="ConfirmDelete" asp-route-id="@v.Task">Delete</a></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="CheckOffTask" asp-route-id="@v.TaskID">Check Off</a></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="UpdateTask" asp-route-id="@v.TaskID">Edit</a></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="ConfirmDelete" asp-route-id="@v.TaskID">Delete</a></td>
                         </tr>
                         }
                     }
@@ -56,9 +56,9 @@
                             <td>@v.Task</td>
                             <td>@v.DueDate</td>
                             <td>@v.Category.CategoryName</td>
-                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="CheckOffTask" asp-route-id="@v.Task">Check Off</a></td>
-                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="UpdateTask" asp-route-id="@v.Task">Edit</a></td>
-                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="ConfirmDelete" asp-route-id="@v.Task">Delete</a></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="CheckOffTask" asp-route-id="@v.TaskID">Check Off</a></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="UpdateTask" asp-route-id="@v.TaskID">Edit</a></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="ConfirmDelete" asp-route-id="@v.TaskID">Delete</a></td>
                         </tr>
                         }
                     }
@@ -88,9 +88,9 @@
                             <td>@v.Task</td>
                             <td>@v.DueDate</td>
                             <td>@v.Category.CategoryName</td>
-                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="CheckOffTask" asp-route-id="@v.Task">Check Off</a></td>
-                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="UpdateTask" asp-route-id="@v.Task">Edit</a></td>
-                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="ConfirmDelete" asp-route-id="@v.Task">Delete</a></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="CheckOffTask" asp-route-id="@v.TaskID">Check Off</a></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="UpdateTask" asp-route-id="@v.TaskID">Edit</a></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="ConfirmDelete" asp-route-id="@v.TaskID">Delete</a></td>
                         </tr>
                         }
                     }
@@ -118,9 +118,9 @@
                             <td>@v.Task</td>
                             <td>@v.DueDate</td>
                             <td>@v.Category.CategoryName</td>
-                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="CheckOffTask" asp-route-id="@v.Task">Check Off</a></td>
-                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="UpdateTask" asp-route-id="@v.Task">Edit</a></td>
-                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="ConfirmDelete" asp-route-id="@v.Task">Delete</a></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="CheckOffTask" asp-route-id="@v.TaskID">Check Off</a></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="UpdateTask" asp-route-id="@v.TaskID">Edit</a></td>
+                            <td><a class="btn btn-sm my-button" asp-controller="Home" asp-action="ConfirmDelete" asp-route-id="@v.TaskID">Delete</a></td>
                         </tr>
                         }
                     }
