--- a/Views/Home/ConfirmDelete.cshtml
+++ b/Views/Home/ConfirmDelete.cshtml
@@ -11,11 +11,8 @@
             <h1>Are you sure you want to delete this task?</h1>
             <h4>This action cannot be undone.</h4>
             <br />
-            <form method="post" asp-controller="Home" asp-action="DeleteTask">
-                <button class="btn btn-danger">Delete</button>
-                <a asp-controller="Home" asp-action="Quadrant" class="btn btn-primary">Cancel</a>
-                <input type="hidden" asp-for="Task" />
-            </form>
+            <a asp-controller="Home" asp-action="DeleteTask" asp-route-id="@Model.TaskID" class="btn btn-danger">Delete</a>
+            <a asp-controller="Home" asp-action="Quadrant" class="btn btn-primary">Cancel</a>
         </div>
         <div class="col-3"></div>
     </div>
