--- a/Views/Home/ConfirmDelete.cshtml
+++ b/Views/Home/ConfirmDelete.cshtml
@@ -4,6 +4,8 @@
 
 @model TaskInfo
 
+@*View to confirm whether the user wants to delete the record or not. Delete button deletes the record and returns the user to the Quadrant view, while the cancel button
+keeps the record and returns the user back to the Quadrant view*@
 <div class="container text-center">
     <div class="row">
         <div class="col-3"></div>
